--- a/templates/admin/manageSubject.html
+++ b/templates/admin/manageSubject.html
@@ -45,6 +45,7 @@
                   <div class="media align-items-center"><span style="background-image: url(img/avatar-8.jpg)" class="avatar avatar-xl mr-3"></span>
                     <div class="media-body overflow-hidden">
                       <p class="card-text text-uppercase">{{ subject.subject }}</p>
+                      <p class="card-text text-uppercase">Teacher | {{ subject.staff_id.first_name }} {{ subject.staff_id.last_name }}</p>
                     </div>
                   </div>
                 </div>
