--- a/templates/admin/manageStudent.html
+++ b/templates/admin/manageStudent.html
@@ -48,10 +48,10 @@
                   <table class=" table table-striped table-hover">
                     <thead>
                       <tr>
-                        <th>ID</th>
-                        <th>Profile Pic</th>
-                        <th>First Name</th>
-                        <th>Last Name</th>
+                        <!-- <th>ID</th> -->
+                        <th>ProfilePic</th>
+                        <th>FirstName</th>
+                        <th>LastName</th>
                         <th>Username</th>
                         <th>Email</th>
                         <th>Course</th>
@@ -65,7 +65,7 @@
                     <tbody>
                         {% for student in students %}
                       <tr>
-                        <th scope="row">{{ student.admin.id }}</th>
+                        <!-- <th scope="row">{{ student.admin.id }}</th> -->
                         <td><img src="{{ student.profile_pic }}" style="border-radius: 50px; width:50px; height:50px"></td>
                         <td>{{ student.admin.first_name }}</td>
                         <td>{{ student.admin.last_name }}</td>
