--- a/templates/admin/studentLeave.html
+++ b/templates/admin/studentLeave.html
@@ -45,7 +45,7 @@
                 <div class="col-lg-10">
                   <br>
                   <div class="form-inner">
-                    <div class="logo text-uppercase"><span>Brint</span><strong class="text-primary">School</strong></div>
+                    <div class="logo text-uppercase"><span>Brint</span><strong class="text-primary">Online School</strong></div>
               <p>online school management platform</p>
                  {% if messages %}
                           {% for message in messages %}
@@ -91,18 +91,12 @@
                         </div>
                         </div>
                     </div>
-                    <br><br>
-                    <div class="form-inner">
-                    <div class="logo text-uppercase"><span>Dash</span><strong class="text-primary">Express</strong></div>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud.</p>
-                    <br><br>
-                    </div>
                     
                     <div class="table">
                         <table class=" table table-striped table-hover">
                           <thead>
                             <tr>
-                              <th>ID</th>
+                              <!-- <th>ID</th> -->
                               <th>Date Applied</th>
                               <th>Name</th>
                               <th> Leave Message</th>
@@ -113,7 +107,7 @@
                           <tbody>
                               {% for feed in leave_data %}
                             <tr>
-                              <th scope="row">{{ feed.id }}</th>
+                              <!-- <th scope="row">{{ feed.id }}</th> -->
                               <td>{{ feed.created }}</td>
                               <td>{{ feed.student_id.admin.first_name }} {{ feed.student_id.admin.last_name }}</td>
                               <td>{{ feed.leave_message }}</td>
