--- a/templates/admin/updateSubject.html
+++ b/templates/admin/updateSubject.html
@@ -83,7 +83,7 @@
                         <input type="hidden" name="staff_id" id="staff_id" value="{{ staff.id }}">
                       </div>
                       <div class="form-group text-center">
-                        <input id="register" type="submit" value="Add Subject" class="btn btn-primary">
+                        <input id="register" type="submit" value="Update Subject Teacher" class="btn btn-primary">
                       </div>
 
                       
