--- a/templates/admin/viewAttendance.html
+++ b/templates/admin/viewAttendance.html
@@ -10,24 +10,24 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="robots" content="all,follow">
   <!-- Bootstrap CSS-->
-  <link rel="stylesheet" href="{% static " dashboard/vendor/bootstrap/css/bootstrap.min.css" %}">
+  <link rel="stylesheet" href="{% static "dashboard/vendor/bootstrap/css/bootstrap.min.css" %}">
   <!-- Font Awesome CSS-->
-  <link rel="stylesheet" href="{% static " dashboard/vendor/font-awesome/css/font-awesome.min.css" %}">
+  <link rel="stylesheet" href="{% static "dashboard/vendor/font-awesome/css/font-awesome.min.css" %}">
   <!-- Fontastic Custom icon font-->
-  <link rel="stylesheet" href="{% static " dashboard/css/fontastic.css" %}">
+  <link rel="stylesheet" href="{% static "dashboard/css/fontastic.css" %}">
   <!-- Google fonts - Roboto -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700">
   <!-- jQuery Circle-->
-  <link rel="stylesheet" href="{% static " dashboard/css/grasp_mobile_progress_circle-1.0.0.min.css" %}">
+  <link rel="stylesheet" href="{% static "dashboard/css/grasp_mobile_progress_circle-1.0.0.min.css" %}">
   <!-- Custom Scrollbar-->
-  <link rel="stylesheet" href="{% static " dashboard/vendor/malihu-custom-scrollbar-plugin/jquery.mCustomScrollbar.css"
+  <link rel="stylesheet" href="{% static "dashboard/vendor/malihu-custom-scrollbar-plugin/jquery.mCustomScrollbar.css"
     %}">
   <!-- theme stylesheet-->
-  <link rel="stylesheet" href="{% static " dashboard/css/style.default.premium.css" %}" id="theme-stylesheet">
+  <link rel="stylesheet" href="{% static "dashboard/css/style.default.premium.css" %}" id="theme-stylesheet">
   <!-- Custom stylesheet - for your changes-->
-  <link rel="stylesheet" href="{% static " dashboard/css/custom.css" %}">
+  <link rel="stylesheet" href="{% static "dashboard/css/custom.css" %}">
   <!-- Favicon-->
-  <link rel="shortcut icon" href="{% static " dashboard/img/favicon.ico" %}">
+  <link rel="shortcut icon" href="{% static "dashboard/img/favicon.ico" %}">
   <!-- Tweaks for older IEs--><!--[if lt IE 9]>
         <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
         <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script><![endif]-->
@@ -48,7 +48,7 @@
           <div class="col-lg-10">
             <br>
             <div class="form-inner">
-              <div class="logo text-uppercase"><span>Brint</span><strong class="text-primary">School</strong></div>
+              <div class="logo text-uppercase"><span>Brint</span><strong class="text-primary">Online School</strong></div>
               <p>online school management platform</p>
               <div class="form-group">
                 <div id="demoMessage4 success_attendance" class="btn btn-success" style="display: none;">
@@ -69,7 +69,7 @@
                 </select>
               </div>
               <div class="form-group-material">
-                <label for="subject" class="label-material">Level</label>
+                <label for="subject" class="label-material">Subscription Plan</label>
                 <select id="level" type="text" name="level" required data-msg="Please Select Student Level"
                   class="form-control select-material">
                   {% for level in levels %}
@@ -112,21 +112,21 @@
     {% include "snippets/footer.html" %}
   </div>
   <!-- JavaScript files-->
-  <script src="{% static " dashboard/vendor/jquery/jquery.min.js" %}"></script>
-  <script src="{% static " dashboard/vendor/bootstrap/js/bootstrap.bundle.min.js" %}"></script>
-  <script src="{% static " dashboard/vendor/jquery.cookie/jquery.cookie.js" %}"> </script>
-  <script src="{% static " dashboard/js/grasp_mobile_progress_circle-1.0.0.min.js" %}"></script>
-  <script src="{% static " dashboard/vendor/chart.js/Chart.min.js" %}"></script>
-  <script src="{% static " dashboard/vendor/jquery-validation/jquery.validate.min.js" %}"></script>
-  <script src="{% static " dashboard/vendor/malihu-custom-scrollbar-plugin/jquery.mCustomScrollbar.concat.min.js"
+  <script src="{% static "dashboard/vendor/jquery/jquery.min.js" %}"></script>
+  <script src="{% static "dashboard/vendor/bootstrap/js/bootstrap.bundle.min.js" %}"></script>
+  <script src="{% static "dashboard/vendor/jquery.cookie/jquery.cookie.js" %}"> </script>
+  <script src="{% static "dashboard/js/grasp_mobile_progress_circle-1.0.0.min.js" %}"></script>
+  <script src="{% static "dashboard/vendor/chart.js/Chart.min.js" %}"></script>
+  <script src="{% static "dashboard/vendor/jquery-validation/jquery.validate.min.js" %}"></script>
+  <script src="{% static "dashboard/vendor/malihu-custom-scrollbar-plugin/jquery.mCustomScrollbar.concat.min.js"
     %}"></script>
-  <script src="{% static " dashboard/js/charts-home.js" %}"></script>
+  <script src="{% static "dashboard/js/charts-home.js" %}"></script>
   <!-- Notifications-->
-  <script src="{% static " dashboard/vendor/messenger-hubspot/build/js/messenger.min.js" %}">   </script>
-  <script src="{% static " dashboard/vendor/messenger-hubspot/build/js/messenger-theme-flat.js" %}">       </script>
-  <script src="{% static " dashboard/js/home-premium.js" %}"> </script>
+  <script src="{% static "dashboard/vendor/messenger-hubspot/build/js/messenger.min.js" %}">   </script>
+  <script src="{% static "dashboard/vendor/messenger-hubspot/build/js/messenger-theme-flat.js" %}">       </script>
+  <script src="{% static "dashboard/js/home-premium.js" %}"> </script>
   <!-- Main File-->
-  <script src="{% static " dashboard/js/front.js" %}"></script>
+  <script src="{% static "dashboard/js/front.js" %}"></script>
   <script>
     $(document).ready(function () {
       $("#fetch_attendance").click(function () {
