--- a/templates/admin/manageStudent.html
+++ b/templates/admin/manageStudent.html
@@ -55,6 +55,7 @@
                         <th>Username</th>
                         <th>Email</th>
                         <th>Course</th>
+                        <th>Staff</th>
                         <th>Address</th>
                         <th>Gender</th>
                         <th>Date Joined</th>
@@ -72,6 +73,7 @@
                         <td>{{ student.admin.username }}</td>
                         <td>{{ student.admin.email }}</td>
                         <td>{{ student.course_id.course }}</td>
+                        <td> {{ student.staff }}</td>
                         <td>{{ student.address }}</td>
                         <td>{{ student.gender }}</td>
                         <td>{{ student.admin.date_joined }}</td>
