--- a/templates/admin/staffLeave.html
+++ b/templates/admin/staffLeave.html
@@ -77,8 +77,8 @@
                   <tbody>
                     {% for feed in leave_data %}
                     <tr>
-                      <!-- <th scope="row">{{ feed.id }}</th>
-                      <td>{{ feed.created }}</td> -->
+                      <!-- <th scope="row">{{ feed.id }}</th> -->
+                      <td>{{ feed.created }}</td> 
                       <td>{{ feed.staff_id.admin.first_name }} {{ feed.staff_id.admin.last_name }}</td>
                       <td>{{ feed.leave_message }}</td>
                       <td>{{ feed.leave_date }}</td>
