--- a/templates/admin/updateStaff.html
+++ b/templates/admin/updateStaff.html
@@ -81,6 +81,10 @@
                         <input id="address" type="text" name="address" value="{{ staff.address }}" required data-msg="Please enter Staff Address" class="input-material">
                         <label for="address" class="label-material">Address</label>
                       </div>
+                      <div class="form-group-material">
+                        <input id="link" type="text" name="link" value="{{ staff.link }}" required data-msg="Please enter Staff link" class="input-material">
+                        <label for="link" class="label-material">Address</label>
+                      </div>
                       
                       <div class="form-group text-center">
                         <input id="register" type="submit" value="Update Staff" class="btn btn-primary">
