--- a/templates/snippets/sidebar.html
+++ b/templates/snippets/sidebar.html
@@ -93,7 +93,7 @@
 
                 {% url "ViewAttendance" as ViewAttendance %}
                 <li class="{% if request.path == ViewAttendance %} active {% endif %}">
-                    <a href="{% url "ViewAttendance" %}"> <i class="{%if request.path == ViewAttendance %} active {% endif %} icon-line-chart"></i>Veiw Attendance</a>
+                    <a href="{% url "ViewAttendance" %}"> <i class="{%if request.path == ViewAttendance %} active {% endif %} icon-line-chart"></i>View Attendance</a>
                 </li>
                 
             </ul>
