--- a/templates/staff/feedback.html
+++ b/templates/staff/feedback.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Brintschool | Feedback</title>
+    <title>Brint Online school | Feedback</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="robots" content="all,follow">
@@ -45,9 +45,9 @@
                 <div class="col-lg-10">
                   <br>
                   <div class="form-inner">
-                    <div class="logo text-uppercase"><span>Dash</span><strong class="text-primary">Express</strong></div>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud.</p>
-                      {% if messages %}
+                    <div class="logo text-uppercase"><span>Brint</span><strong class="text-primary">Online School</strong></div>
+                    <p>online school management platform</p>
+                        {% if messages %}
                           {% for message in messages %}
                           {% if message.tags == 'success' %}
                             <span id="demoMessage4" class="btn btn-success">{{message}}</span>
@@ -72,17 +72,17 @@
                     </form>
                     
                     <br><br>
-                    <div class="form-inner">
+                    <!-- <div class="form-inner">
                     <div class="logo text-uppercase"><span>Dash</span><strong class="text-primary">Express</strong></div>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud.</p>
                     <br><br>
-                    </div>
+                    </div> -->
                     
                     <div class="table">
                         <table class=" table table-striped table-hover">
                           <thead>
                             <tr>
-                              <th>ID</th>
+                              <!-- <th>ID</th> -->
                               <th> FeedBack</th>
                               <th>FeedBack Reply</th>
                               <th>Date Sent</th>
@@ -91,7 +91,7 @@
                           <tbody>
                               {% for feed in feedback_data %}
                             <tr>
-                              <th scope="row">{{ feed.id }}</th>
+                              <!-- <th scope="row">{{ feed.id }}</th> -->
                               <td>{{ feed.feedback }}</td>
                               <td>{{ feed.feedback_reply }}</td>
                               <td>{{ feed.created }}</td>
