--- a/templates/staff/home.html
+++ b/templates/staff/home.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Brintschool | Staff</title>
+    <title>Brint Online school | Staff</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="robots" content="all,follow">
@@ -44,8 +44,14 @@
                 <!-- Income-->
                 <div class="card income text-center">
                     <div class="icon"><i class="icon-line-chart"></i></div>
-                    <div class="number">126,418</div><strong class="text-primary">All Income</strong>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit sed do.</p>
+                    <div class="number">
+                        <p> {{ staff_count }}</p>
+                    </div><strong class="text-primary">Assigned Students</strong>
+                    {% for stud in student %}
+                        <!-- {% if stud.staff == staff_name %} -->
+                            <p>{{ stud.admin.first_name }} {{ stud.admin.last_name }}</p>
+                        <!-- {% endif %} -->
+                    {% endfor %}
                 </div>
                 </div>
                 <div class="col-lg-4">
