--- a/templates/staff/manageAttendance.html
+++ b/templates/staff/manageAttendance.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Brintschool | Attendance</title>
+    <title>Brint Online school | Attendance</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="robots" content="all,follow">
@@ -45,9 +45,9 @@
                 <div class="col-lg-10">
                   <br>
                   <div class="form-inner">
-                    <div class="logo text-uppercase"><span>Dash</span><strong class="text-primary">Express</strong></div>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud.</p>
-                      <div class="form-group">
+                    <div class="logo text-uppercase"><span>Brint</span><strong class="text-primary">Online School</strong></div>
+                    <p>online school management platform</p>
+                 <div class="form-group">
                             <div id="demoMessage4 success_attendance" class="btn btn-success" style="display: none;">
                               
                             </div>
